@@ -1,5 +1,6 @@
 Changes in 4.0.5:
 - Fix crash due to uncaught exception when creating torrent (255020)
+- Modify tracker grouping script to avoid a memory leak in krosspython
 
 Changes in 4.0.4:
 - Make sure that syndication filter save location overrides group save location (250116)
